
0.?.? - ??.??.2009
  * Display update re-implemented, much faster now
  * One additional zoom level, up to 16:1
  * Fixes for Mac OS X
  * Bugfix for save in Amica Paint format
  * Replaced MDI with tabbed interface
  * Consistent icons and standard menu entries
    * Standard key bindings like Ctrl+S (Cmd+S) work now
  * Workaround: Tools are always enabled on Win32, because transparent Icons
    look strange when being inactive
  * Ask for confirmation when user tries to close a modified document 
  * Zoom using mouse wheel
  * Automatic scrolling when cursor is moved to one of the edges
  * Scrolling using dragging with middle mouse button
  * Keyboard bindings for tools and drawing
    * F1 to F5 for tools
    * Cursor keys move the drawing cursor
    * 'C' and 'V' act like left and right mouse button
  * Color picker added
    * Can be activated using Shift key, menu or toolbar
  * Special mouse cursors added for all tools

0.1.1 - 25.03.2009
  * Current Cell view added
  * Files get an extension if the user didn't supply one
  * Drawing mode can be chosen, this allows the user to select the behaviour
    when the color limit is hit

0.1.0 - 23.03.2009
  * First release, used internally only